# School-Chat

./: .breakpoints  .eslintrc.js  .gitignore  .prettierrc  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLan.txt  README.md  RUNNING.md  SECURITY.md  TOS.html  accounting.py  addons.py  ai.py  app.py  appConfig.py  app_config.py  chat-old.py  chat.html  chat.js  chat.py  chat.txt  cmd_code_revamp_test.py  cmds.py  config.py  database.py  dev-index.html  example.addons.py  example.chatserverd.service  example.keys.py  filtering.py  games.py  index.html  index.js  keys.py  log.py  login.html  main.py  message.py  (+24 more)
.github/workflows/: mypy.yml  pylint.yml  python-app.yml  ruff.yml
app/: __init__.py  accounting-old.py  accounting.py  chat.py  cmds.py  connections.py  database.py  filtering.py  log.py  login.py  main-old.py  online.py  private.py  rooms.py  routes.py  settings.py  signup.py  theme.py  uploading.py  user.py  word_lists.py
backend/: .command_list.txt.2547731930~  Chat-backup.txt  accounts.txt  ajax.js  chat-rooms_log.txt  chat.js  chat.txt  cmd_def.txt  command-client.js  command_list (old).txt  command_list.txt  command_log.txt  commands.js  commands.txt  dev-menu.js  domains.txt  permission.txt  styles.js
chat/: chat.py  database.py  filtering.py  message.py  rooms.py
commands/: debug.py  helpers.py  moderation.py  online.py  online_commands.py  other.py  room.py  user_commands.py
config/: keys.conf  keys.example.conf
frontend/: package-lock.json  package.json
logs/: logs.py
online/: online.py
private/: database.py  message.py  private.py  rooms.py
static/: Christmas-style.css  DBM.js  acc-edit.js  accounts.js  ai.js  ajax.js  backup.css  chat.html  chat.js  chat_extra.js  chatlog.js  cmd_def.txt  cmds.js  commands.js  commands.txt  dev-menu.js  dev-menus.js  html-stuff.js  link_data.json  login.js  manifest.json  mod-menu.js  non-admin.js  notifications.css  notifications.js  oldstyle.css  online.js  settings.js  signup.js  static.js  style.css  styles.js  viewer.js
temp_file/: moderation.py  online.py
templates/: Backup-chat.html  DPM.html  GPT.html  JOTD-index.html  about-us.html  acc-edit-index.html  admin.html  chaos-index.html  chat.html  dev-index.html  dev.html  editor-index.html  index.html  jslint_report.html  login.html  mod-index.html  mod.html  password_email_temp.html  password_part1.html  password_part2.html  settings.html  signup-index.html  update-log.html  verified.html  viewer.html
user/: database.py  login.py  settings.py  signup.py  user.py
(+124 files in other folders)
