[tool.poetry]
name = "Class Chat"
version = "0.1.3.1"
description = "This is a private chat made for chatting with friends."
authors = ["C7, cserver"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
urllib3 = "^1.26.12"
bs4 = "^0.0.1"
Flask-SocketIO = "^5.3.2"
psutil = "^5.9.4"
gunicorn = "^20.1.0"
eventlet = "^0.33.2"
pymongo = "^4.3.3"
better-profanity = "^0.7.0"
Flask = "2.2.3"
emit = "^0.4.0"
openai = "^0.27.6"
xterm = "0.7.3"
console = "^0.9907"
Flask-SSLify = "^0.1.5"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"