[tool.poetry]
name = "Class Chat"
version = "0.8.3.5"
description = "This is a private chat made for chatting with friends."
authors = ["cseven, cserver"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask-SocketIO = "^5.3.2"
psutil = "^5.9.4"
gunicorn = "^20.1.0"
eventlet = "^0.33.2"
pymongo = "^4.3.3"
better-profanity = "^0.7.0"
Flask = "2.2.3"
Flask-APScheduler = "^1.12.4"
dbus-python = "1.3.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"