[tool.poetry]
name = "Class Chat"
version = "1.2.1"
description = "This is a private chat made for chatting with friends."
authors = ["cseven", "cserver"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
replit = "^3.2.4"
Flask-SocketIO = "^5.3.2"
psutil = "^5.9.4"
gunicorn = "^20.1.0"
eventlet = "^0.33.2"
pymongo = "^4.3.3"
better-profanity = "^0.7.0"
Flask = "2.2.3"
Flask-APScheduler = "^1.12.4"
Flask-Login = "0.6.2"
consultor = "^0.2.0"
pyclamd = "^0.4.0"
bitdust = "^0.1.8.234"
git-python = "^1.0.3"
accounting = "^1.0.0"
cmds = "^0.1.1"
minilog = "^2.3"

[tool.poetry.extras]
systemd = ['dbus-python']

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
